style.css
body{
  font-family: 'Roboto', sans-serif;
  margin: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

/* HEADER */
  
header{
  font-family: 'VT323', monospace;
  font-size: 40px;
  color: #283234;
  padding: 15px;
  text-align: center;
}

/* CONTENT */

.content{
  display: flex;
  justify-content: space-around;
  align-items: center;
  color: #283234;
  padding: 50px 150px;
  flex-wrap: wrap-reverse;
  flex-grow: 1;
}

.left{
  display: flex;
  flex-direction: column;
  align-items: center;
  gap:20px;
  width: 150px;
  margin-bottom: 30px;
}

.size{
  display: flex;
  flex-direction: column;
  align-items: center;
}

button{
  padding: 10px 0px;
  transition: all 0.07s ease;
  cursor: pointer;
  width: 100%;
  font-weight: bold;
}

input[type='color'] {
    -webkit-appearance: none;
    width: 50px;
    height: 50px;
    border: none;
}

button:hover{
  transform: scale(1.1);
}

.right{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 30px;
}

.grid{
  height: 360px;
  width: 360px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/* FOOTER */

a{
  text-decoration: none;
  color: #283234;
}

footer{
  font-weight: bold;
  padding: 10px;
  text-align: center;
  font-size: 11px;
}

